src/main/java/com/example/blog/_core/util/error/ex/Exception403.java
package com.example.blog._core.util.error.ex;

public class Exception403 extends RuntimeException {

    public Exception403(String msg) {
        super(msg);
    }
}
